syntax = "proto3";

package note;

service noteOption {
    rpc AddRecord (AddRequest) returns (Response);
    rpc DeleteRecord (Request) returns (Response);
    rpc UpdateRecord (UpdateRequest) returns (Response);
    rpc QueryRecord (Request) returns (Response);
}

message AddRequest {
    string title = 1;
    string text = 2;
}

message Request {
    int32 id = 1;
}

message UpdateRequest {
    int32 id = 1;
    string title = 2;
    string text = 3;
}

message Response {
    int32 code = 1;
    AddRequest data = 2;
    string message = 3;
}